--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "scope": "/",
   "icons": [
     {
-      "src": "/icon-256x256.png",
+      "src": "/pwa-sandbox/icon-256x256.png",
       "sizes": "256x256",
       "type": "image/png"
     }
